@@ -3,6 +3,8 @@
 	  for both jets and jets with jvf accepted
 	* Added TTree to perform sensitivity optimization cuts
 	* Addin AtlasStyle macros to the package
+	* Adding SensitivityCuts.cxx macro to study the optimal set of
+	  cuts for signal efficiency
 
 09-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Changed m_jet.m_jet_isbad to m_jet.m_jet_isnotbad
